// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots as link hrefs 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-nipl9k=""
  >
    <a
      data-css-w1mtet=""
      disabled={false}
      href="https://duckduckgo.com"
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="caret left icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Click as link
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots disabled disabled 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-nipl9k=""
  >
    <button
      data-css-16yze2u=""
      disabled={true}
      onClick={[Function]}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="caret left icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots normal looks great 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-nipl9k=""
  >
    <button
      data-css-w1mtet=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="caret left icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        All the things
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots with onClick clicks once 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-nipl9k=""
  >
    <button
      data-css-w1mtet=""
      disabled={false}
      onClick={[Function]}
      style={Object {}}
    >
      <div
        data-css-1mgd019=""
      >
        <div
          className="css-index--iconcontainer-1o7wiin"
        >
          <svg
            aria-label="caret left icon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 12l5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      >
        Clicks once
      </span>
    </button>
  </div>
</div>
`;
